pre_commit_hooks/kubernetes/kyverno/kyverno_test/tests/assets/mutating-policy/config/policies/add-emptydir-sizelimit.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: MutatingPolicy
metadata:
  name: add-emptydir-sizelimit
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["pods"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          spec: Object.spec{
            volumes: object.spec.volumes.map(volume, Object.spec.volumes.Item{
              emptyDir: Object.spec.volumes.Item.emptyDir{
                sizeLimit: quantity("100Mi")
              }
            })
          }
        }
