pre_commit_hooks/kubernetes/kyverno/kyverno_test/tests/assets/mutating-policy/config/tests/add-emptydir-sizelimit/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: app
    image: nginx:1.29
    volumeMounts:
    - name: cache
      mountPath: /cache
  volumes:
  - name: cache
    emptyDir: {}
