pre_commit_hooks/kubernetes/kyverno/kyverno_test/tests/assets/mutating-policy/config/tests/add-emptydir-sizelimit/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-emptydir-sizelimit
policies:
- ../../policies/add-emptydir-sizelimit.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: add-emptydir-sizelimit
  resources:
  - my-pod
  result: pass
  patchedResources: patched.yaml
